[gd_scene load_steps=3 format=3 uid="uid://f3u4ruk6n31t"]

[ext_resource type="Script" uid="uid://bq7t4lm72xi2e" path="res://src/windows/dbase_editor/cutscenes.gd" id="1_tokwl"]
[ext_resource type="Script" uid="uid://bh8vniea2yee2" path="res://src/utils/drag_drop_tree.gd" id="2_6cmor"]

[node name="Cutscenes" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -834.0
offset_bottom = -444.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tokwl")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1
script = ExtResource("2_6cmor")

[node name="PopupMenu" type="PopupMenu" parent="VBoxContainer/Tree"]
unique_name_in_owner = true
auto_translate_mode = 1
item_count = 2
item_0/text = "Copy"
item_0/id = 0
item_1/text = "Delete"
item_1/id = 1

[node name="EmptyPopupMenu" type="PopupMenu" parent="VBoxContainer/Tree"]
unique_name_in_owner = true
auto_translate_mode = 1
item_count = 2
item_0/text = "Add"
item_0/id = 0
item_1/text = "Paste"
item_1/id = 1

[node name="AddButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="InfoPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="empty_clicked" from="VBoxContainer/Tree" to="." method="_on_tree_empty_clicked"]
[connection signal="item_edited" from="VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="item_mouse_selected" from="VBoxContainer/Tree" to="." method="_on_tree_item_mouse_selected"]
[connection signal="item_moved" from="VBoxContainer/Tree" to="." method="_on_tree_item_moved"]
[connection signal="item_selected" from="VBoxContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="index_pressed" from="VBoxContainer/Tree/PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="index_pressed" from="VBoxContainer/Tree/EmptyPopupMenu" to="." method="_on_empty_popup_menu_index_pressed"]
